--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/welcomeTextView"
-        android:text="¡Bienvenido!"
+        android:text="@string/welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,7 +20,7 @@
 
     <TextView
         android:id="@+id/loginTextView"
-        android:text="Iniciar sesión"
+        android:text="@string/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +34,7 @@
     <!-- Height at 48 dp to avoid the 'too small' error-->
     <EditText
         android:id="@+id/mailEditText"
-        android:hint="Correo electrónico"
+        android:hint="@string/email_hint"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         app:layout_constraintBottom_toTopOf="@id/passwordEditText"
@@ -45,7 +45,7 @@
     <!-- Height at 48 dp to avoid the 'too small' error-->
     <EditText
         android:id="@+id/passwordEditText"
-        android:hint="Contraseña"
+        android:hint="@string/password_hint"
         android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="48dp"
@@ -57,7 +57,7 @@
 
     <Button
         android:id="@+id/loginButton"
-        android:text="Iniciar sesión"
+        android:text="@string/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/passwordEditText"
@@ -67,7 +67,7 @@
 
     <TextView
         android:id="@+id/questionTextView"
-        android:text="¿Aún no tienes una cuenta?"
+        android:text="@string/account_question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +79,7 @@
 
     <Button
         android:id="@+id/registerButton"
-        android:text="Crear cuenta"
+        android:text="@string/create_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
