--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:title="Registro"
+        android:title="@string/register_title"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -18,7 +18,7 @@
     <!-- Height at 48 dp to avoid the 'too small' error-->
     <EditText
         android:id="@+id/mailEditText"
-        android:hint="Correo electrónico"
+        android:hint="@string/email_hint"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         app:layout_constraintBottom_toTopOf="@id/passwordEditText"
@@ -29,7 +29,7 @@
     <!-- Height at 48 dp to avoid the 'too small' error-->
     <EditText
         android:id="@+id/passwordEditText"
-        android:hint="Contraseña"
+        android:hint="@string/password_hint"
         android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="48dp"
@@ -42,7 +42,7 @@
     <!-- Height at 48 dp to avoid the 'too small' error-->
     <EditText
         android:id="@+id/repeatPasswordEditText"
-        android:hint="Repetir contraseña"
+        android:hint="@string/repeat_password_hint"
         android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="48dp"
@@ -53,7 +53,7 @@
 
     <Button
         android:id="@+id/registerButton"
-        android:text="Registrar"
+        android:text="@string/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
