--- a/app/src/main/res/layout/recycler_view_cell.xml
+++ b/app/src/main/res/layout/recycler_view_cell.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/contact_icon"
+        android:id="@+id/contactIconImageView"
         android:layout_width="48dp"
         android:layout_height="48dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -13,25 +14,25 @@
         android:layout_margin="16dp" />
 
     <TextView
-        android:id="@+id/contact_name_text"
+        android:id="@+id/contactNameTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Nombre"
         android:textStyle="bold"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@id/contact_icon"
+        app:layout_constraintStart_toEndOf="@id/contactIconImageView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="16dp" />
 
     <TextView
-        android:id="@+id/contact_number_text"
+        android:id="@+id/contactNumberTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Número"
         android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@id/contact_name_text"
-        app:layout_constraintTop_toBottomOf="@id/contact_name_text"
+        app:layout_constraintStart_toStartOf="@id/contactNameTextView"
+        app:layout_constraintTop_toBottomOf="@id/contactNameTextView"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="2dp"/>
 
