--- a/app/src/main/res/layout/recycler_view_cell_add_contact.xml
+++ b/app/src/main/res/layout/recycler_view_cell_add_contact.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/contact_icon"
+        android:id="@+id/addIconImageView"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:src="@drawable/baseline_contact_phone_24"
+        android:src="@drawable/baseline_add_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="16dp" />
 
     <TextView
-        android:id="@+id/contact_name_text"
+        android:id="@+id/addContactTextView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Añadir contacto"
+        android:layout_height="match_parent"
+        android:text="@string/add_contact"
         android:textStyle="bold"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@id/contact_icon"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/addIconImageView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/addIconImageView"
+        app:layout_constraintBottom_toBottomOf="@id/addIconImageView"
         android:layout_margin="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
