--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="colorDelete">#F44336</color>
-    <color name="colorHint">#9E9E9E</color>
+    <!-- Primary colors -->
+    <color name="primary_red">#c41e3a</color>
+    <color name="primary_red_dark">#a01829</color>
+    <color name="primary_red_light">#d94d5c</color>
+
+    <!-- Neutral grays -->
+    <color name="gray_light">#f5f5f5</color>
+    <color name="gray_medium">#9e9e9e</color>
+    <color name="gray_dark">#424242</color>
+
+    <!-- Backgrounds -->
+    <color name="background_white">#ffffff</color>
+    <color name="surface_white">#ffffff</color>
+
+    <!-- Text colors -->
+    <color name="text_primary">#212121</color>
+    <color name="text_secondary">#757575</color>
+    <color name="text_on_primary">#ffffff</color>
+
+    <!-- State colors -->
+    <color name="success_green">#4caf50</color>
+    <color name="warning_orange">#ff9800</color>
+    <color name="error_red">#f44336</color>
+
+    <!-- Material Design required colors -->
+    <color name="colorPrimary">@color/primary_red</color>
+    <color name="colorPrimaryVariant">@color/primary_red_dark</color>
+    <color name="colorOnPrimary">@color/text_on_primary</color>
+    <color name="colorSecondary">@color/gray_medium</color>
+    <color name="colorSecondaryVariant">@color/gray_dark</color>
+    <color name="colorOnSecondary">#ffffff</color>
+    <color name="colorSurface">@color/surface_white</color>
+    <color name="colorOnSurface">@color/text_primary</color>
+    <color name="colorBackground">@color/background_white</color>
+    <color name="colorOnBackground">@color/text_primary</color>
+    <color name="colorError">@color/error_red</color>
+    <color name="colorOnError">#ffffff</color>
+
+    <!-- Other colors -->
+    <color name="color_delete">#F44336</color>
+    <color name="color_hint">#9E9E9E</color>
 </resources>
+
+
+
+
+
+
+
