--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,32 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.QuickSOS" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <!-- Primary colors -->
+        <item name="colorPrimary">@color/primary_red</item>
+        <item name="colorOnPrimary">@color/text_on_primary</item>
+
+        <!-- Secondary colors -->
+        <item name="colorSecondary">@color/gray_medium</item>
+        <item name="colorOnSecondary">#ffffff</item>
+
+        <!-- Surface colors -->
+        <item name="colorSurface">@color/surface_white</item>
+        <item name="colorOnSurface">@color/text_primary</item>
+
+        <!-- Error colors -->
+        <item name="colorError">@color/error_red</item>
+        <item name="colorOnError">#ffffff</item>
+
+        <!-- Status bar color -->
+        <item name="android:statusBarColor">@color/primary_red_dark</item>
     </style>
 
     <style name="Theme.QuickSOS" parent="Base.Theme.QuickSOS" />
+
     <style name="Theme.SplashScreen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Splash screen with custom colors -->
+        <item name="colorPrimary">@color/primary_red</item>
+        <item name="android:statusBarColor">@color/background_white</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 </resources>
