--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="45dp"
-        android:textSize="25sp" />
+        android:textSize="25sp"
+        android:textColor="@color/primary_red_dark"/>
 
     <TextView
         android:id="@+id/loginTextView"
