--- a/app/src/main/res/layout/fragment_guest_personal_contacts.xml
+++ b/app/src/main/res/layout/fragment_guest_personal_contacts.xml
@@ -17,7 +17,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/messageTextView"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintVertical_chainStyle="packed"
+        android:textColor="@color/primary_red"/>
 
     <TextView
         android:id="@+id/messageTextView"
