--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -31,7 +31,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             app:cardElevation="1dp"
-            app:cardCornerRadius="8dp">
+            app:cardCornerRadius="8dp"
+            app:cardBackgroundColor="@color/gray_light">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -114,7 +115,8 @@
             app:cardElevation="1dp"
             app:cardCornerRadius="8dp"
             app:strokeColor="#D32F2F"
-            app:strokeWidth="1dp">
+            app:strokeWidth="1dp"
+            app:cardBackgroundColor="@color/gray_light">
 
             <!-- Eliminar cuenta -->
             <LinearLayout
