--- a/app/src/main/res/layout/recycler_view_cell.xml
+++ b/app/src/main/res/layout/recycler_view_cell.xml
@@ -7,10 +7,11 @@
 
     <ImageView
         android:id="@+id/contactIconImageView"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="58dp"
+        android:layout_height="58dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/contactNameTextView"
+        app:layout_constraintBottom_toBottomOf="@id/contactNumberTextView"
         android:layout_margin="16dp" />
 
     <TextView
